--- a/application/Makefile
+++ b/application/Makefile
@@ -154,8 +154,8 @@ CPPFLAGS += 	-mthumb			\
 		-DSTM32L1XX_MD		\
 		-DSTM32L_PLATFORM	\
 		-DLOGIN_PRINT_EN	\
-		-USYS_PRINT_EN		\
-		-USYS_DBG_EN		\
+		-DSYS_PRINT_EN		\
+		-DSYS_DBG_EN		\
 		-UAPP_DBG_EN		\
 		-UAPP_PRINT_EN		\
 		-UAPP_DBG_SIG_EN	\
