--- a/boot/Makefile
+++ b/boot/Makefile
@@ -11,7 +11,7 @@ APP_ADDR		= -DAPP_START_ADDR=0x08003000
 SYS_CONSOLE_BAUDRATE	= 115200
 CONSOLE_BAUDRATE_DEF	= -DSYS_CONSOLE_BAUDRATE=$(SYS_CONSOLE_BAUDRATE)
 
-OPTIMIZE_OPTION		= -g -Os
+OPTIMIZE_OPTION		= -g -O2
 RELEASE_OPTION		= -DRELEASE
 WARNING_OPTION		= -Werror -W
 
