fix fifo and ring_buffer

--- a/application/Makefile
+++ b/application/Makefile
@@ -123,7 +123,7 @@ CFLAGS +=	-mthumb			\
 		-DSTM32L_PLATFORM	\
 		-DLOGIN_PRINT_EN	\
 		-DSYS_PRINT_EN		\
-		-USYS_DBG_EN		\
+		-DSYS_DBG_EN		\
 		-UAPP_DBG_EN		\
 		-UAPP_PRINT_EN		\
 		-UAPP_DBG_SIG_EN	\
@@ -155,7 +155,7 @@ CPPFLAGS += 	-mthumb			\
 		-DSTM32L_PLATFORM	\
 		-DLOGIN_PRINT_EN	\
 		-DSYS_PRINT_EN		\
-		-USYS_DBG_EN		\
+		-DSYS_DBG_EN		\
 		-UAPP_DBG_EN		\
 		-UAPP_PRINT_EN		\
 		-UAPP_DBG_SIG_EN	\
