ak message speed optimize

--- a/application/Makefile
+++ b/application/Makefile
@@ -53,7 +53,7 @@ RELEASE_OPTION = -DRELEASE
 IRQ_DEBUG_OPTION = -UAK_IO_IRQ_ANALYZER
 
 # Enable ak message log (via UART console).
-LOG_AK_KERNEL_ENABLE = -UAK_TASK_LOG_ENABLE
+LOG_AK_KERNEL_ENABLE = -UAK_TASK_LOG_CONSOLE_ENABLE
 
 # Enable to using USB hareware configuration.
 USB_OPTION = -UUSING_USB_MOD
